--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "PHPExcel"]
 	path = PHPExcel
 	url = https://github.com/PHPOffice/PHPExcel.git
+
+[submodule "pdooci"]
+	path = pdooci
+	url = https://github.com/taq/pdooci.git
