--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,12 @@ deploy-staging:
   stage: deploy
   script: echo "Deploy on staging"
   environment: staging
-  only: develop
+  only:
+    - develop
 
 deploy-production:
   stage: deploy
   script: echo "Deploy on production"
   environment: production
-  only: master
+  only:
+    - master
