deplacement image + ajout git strategy
strategy de clonage recurssif

image dans job php-5.6 (utilisation de différentes images)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,14 @@
-image: localhost:5000/listmanager_image
+#image: localhost:5000/listmanager_image
+
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
 
 stages:
   - test
   - deploy
 
 test-php5.6:
+  image: localhost:5000/listmanager_image
   stage: test
   script:
     - phpunit -c phpunit.xml tests/
