--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -7,6 +7,7 @@ ENV https_proxy=http://scoudrais:achangertest@phil:8080/
 RUN apt update && apt install -y \
 php7.0 \
 php7.0-xdebug \
+php7.0-xml \
 wget \
 git \
 && rm -rf /var/lib/apt/lists/*
