ajout de dépendances php7.0 manquantes

--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -8,6 +8,8 @@ RUN apt update && apt install -y \
 php7.0 \
 php7.0-xdebug \
 php7.0-xml \
+php7.0-mbstring
+php7.0-zip
 wget \
 git \
 && rm -rf /var/lib/apt/lists/*
