ajout des pages de la branche master en public/, public/develop pour develop
permet de récupérer en public/ uniquement le code coverage de master pour le badge (version utilisable en prod)
le report en public/develop pour que le dev puisse voir sa propre avancée lors d'un push sur develop

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,14 +29,27 @@ test-php7:
     - phpunit --coverage-text --color=never -c phpunit.xml tests/
   tags:
     - docker
-    
+
 pages:
   image: localhost:5000/listmanager_image
+  only : master
   tags:
     - docker
   stage: deploy
   script:
     - phpunit --coverage-html public --color=never -c phpunit.xml tests/
+  artifacts:
+    paths:
+      - public
+
+pages:
+  image: localhost:5000/listmanager_image
+  only : develop
+  tags:
+    - docker
+  stage: deploy
+  script:
+    - phpunit --coverage-html public/develop/ --color=never -c phpunit.xml tests/
   artifacts:
     paths:
       - public
