simplify gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,24 +32,11 @@ test-php7:
 
 pages:
   image: localhost:5000/listmanager_image
-  only : master
   tags:
     - docker
   stage: deploy
   script:
-    - phpunit --coverage-html public --color=never -c phpunit.xml tests/
-  artifacts:
-    paths:
-      - public
-
-pages:
-  image: localhost:5000/listmanager_image
-  only : develop
-  tags:
-    - docker
-  stage: deploy
-  script:
-    - phpunit --coverage-html public/develop/ --color=never -c phpunit.xml tests/
+    - phpunit --coverage-html public/${CI_COMMIT_REF_NAME} --color=never -c phpunit.xml tests/
   artifacts:
     paths:
       - public
