--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,19 @@ test-php7:
   tags:
     - docker
 
+  pages:
+    image: localhost:5000/listmanager_image
+    tags:
+      - docker
+    stage: deploy
+    script:
+      - phpunit --coverage-html public --color=never -c phpunit.xml tests/
+    artifacts:
+      paths:
+        - public
+    only:
+      - master
+
 deploy-staging:
   stage: deploy
   script: echo "Deploy on staging"
