--- a/Dockerfile.jessie
+++ b/Dockerfile.jessie
@@ -7,6 +7,7 @@ ENV https_proxy=http://scoudrais:achangertest@phil:8080/
 RUN apt update && apt install -y \
 php5 \
 php5-xdebug \
+php5-sqlite \
 wget \
 git \
 && rm -rf /var/lib/apt/lists/*
