prise en compte de dbunit par composer + ajout composer dans dockerfile

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
 stages:
+  - build
   - test
   - deploy
 
@@ -11,10 +12,21 @@ before_script:
   - uname -a
   - whoami
 
+build-php5.6:
+  stage: build
+  script:
+    - docker build -t localhost:5000/listmanager_image Dockerfile.jessie .
+
+build-php7:
+  stage: build
+  script:
+    - docker build -t localhost:5000/listmanager_image:stretch Dockerfile.stretch .
+
 test-php5.6:
   image: localhost:5000/listmanager_image
   stage: test
   script:
+    - composer install
     - phpunit --coverage-text --color=never -c phpunit.xml tests/
   tags:
     - docker
@@ -26,6 +38,7 @@ test-php7:
   allow_failure: true
   stage: test
   script:
+    - composer install
     - phpunit --coverage-text --color=never -c phpunit.xml tests/
   tags:
     - docker
