--- a/Dockerfile.jessie
+++ b/Dockerfile.jessie
@@ -8,7 +8,6 @@ RUN apt update && apt install -y \
 php5 \
 php5-xdebug \
 php5-sqlite \
-composer \
 wget \
 git \
 && rm -rf /var/lib/apt/lists/*
@@ -16,6 +15,7 @@ git \
 RUN wget https://phar.phpunit.de/phpunit-5.7.phar
 RUN chmod +x phpunit-5.7.phar
 RUN mv phpunit-5.7.phar /usr/local/bin/phpunit
-RUN composer install --dev
+RUN wget https://getcomposer.org/composer.phar && chmod +x composer.phar
+RUN mv composer.phar /bin/composer
 
 WORKDIR /tmp
