--- a/Dockerfile.stretch
+++ b/Dockerfile.stretch
@@ -10,7 +10,6 @@ php7.0-xdebug \
 php7.0-xml \
 php7.0-mbstring \
 php7.0-zip \
-composer \
 wget \
 git \
 && rm -rf /var/lib/apt/lists/*
@@ -18,6 +17,7 @@ git \
 RUN wget https://phar.phpunit.de/phpunit-6.2.phar
 RUN chmod +x phpunit-6.2.phar
 RUN mv phpunit-6.2.phar /usr/local/bin/phpunit
-RUN composer install --dev
+RUN wget https://getcomposer.org/composer.phar && chmod +x composer.phar
+RUN mv composer.phar /bin/composer
 
 WORKDIR /tmp
